--- a/productlist.css
+++ b/productlist.css
@@ -35,3 +35,35 @@ article {
 article p {
   color: white;
 }
+
+.onSale .price::after {
+  background-color: red;
+  color: white;
+  content: "onSale";
+  position: relative;
+  top: auto;
+  left: 62%;
+  padding: 7px;
+  border-radius: 4px;
+}
+
+.product-list article.soldOut::before {
+  content: "Sold out";
+  position: absolute;
+  background-color: white;
+  color: black;
+  padding: 1rem;
+  font-family: Yrsa;
+}
+
+.product-list article.soldOut img {
+  opacity: 0.5;
+}
+
+.product-list article .onSale {
+  display: none;
+}
+
+.product-list article.onSale .discounted {
+  display: flex;
+}
