--- a/productlist.css
+++ b/productlist.css
@@ -13,13 +13,13 @@
   gap: 1rem;
 }
 
-img {
+.image {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-img:hover {
+.image:hover {
   scale: 1.05;
   -webkit-mask-image: radial-gradient(
     circle,
