--- a/global.css
+++ b/global.css
@@ -43,6 +43,13 @@ body {
 
 header {
   background-color: rgb(26, 21, 21);
+  padding: 0px;
+  z-index: 99;
+  position: sticky;
+  top: 0;
+  -webkit-box-shadow: 0px 10px 10px 0px rgba(54, 47, 47, 0.75);
+  -moz-box-shadow: 0px 10px 10px 0px rgba(54, 47, 47, 0.75);
+  box-shadow: 0px 10px 10px 0px rgba(54, 47, 47, 0.75);
 }
 
 ul {
